[gd_scene load_steps=12 format=3 uid="uid://c4utqxow0an5c"]

[ext_resource type="Script" path="res://Editor/draw.gd" id="1_pn1jy"]
[ext_resource type="Texture2D" uid="uid://wd2352w3db72" path="res://Editor/pixil-frame-043.png" id="2_m5b44"]
[ext_resource type="Texture2D" uid="uid://cbdxcjfop64m0" path="res://Editor/l1kpfxyu.bmp" id="3_cx1s5"]
[ext_resource type="Texture2D" uid="uid://djmbal6wdb4id" path="res://Editor/vk4263n1.bmp" id="4_ncr0o"]
[ext_resource type="Texture2D" uid="uid://d3y34b5v27vii" path="res://Editor/wlnydhtk.bmp" id="4_wi5w6"]
[ext_resource type="Texture2D" uid="uid://csjb73m2bg0sx" path="res://Editor/w6b4e24a.bmp" id="6_86ko6"]
[ext_resource type="Texture2D" uid="uid://cnuekxl41nlbm" path="res://Editor/xb3lnhng.bmp" id="7_vdv37"]
[ext_resource type="Texture2D" uid="uid://daqg70rv0nfaw" path="res://Editor/pixil-frame-059.png" id="8_ufw7c"]
[ext_resource type="Script" path="res://Scenes/level_select_handler.gd" id="9_blewi"]

[sub_resource type="TileSet" id="TileSet_yq80h"]
tile_size = Vector2i(1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ik0bx"]
size = Vector2(64, 64)

[node name="Node2D" type="Node2D"]
top_level = true
script = ExtResource("1_pn1jy")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_yq80h")

[node name="ColorRect" type="ColorRect" parent="."]
top_level = true
clip_children = 2
visibility_layer = 514
offset_right = 64.0
offset_bottom = 64.0
size_flags_vertical = 8
color = Color(0, 0.466667, 0.372549, 0)

[node name="ColorRect2" type="ColorRect" parent="."]
show_behind_parent = true
clip_children = 2
visibility_layer = 514
offset_left = 64.0
offset_right = 96.0
offset_bottom = 64.0
size_flags_vertical = 8
color = Color(0.261223, 0.364136, 0.559216, 1)

[node name="Button" type="TextureButton" parent="."]
offset_left = 82.0
offset_top = 29.0
offset_right = 92.0
offset_bottom = 39.0
texture_normal = ExtResource("2_m5b44")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(32, 32)
shape = SubResource("RectangleShape2D_ik0bx")

[node name="save_button" type="TextureButton" parent="."]
offset_left = 82.0
offset_top = 40.0
offset_right = 92.0
offset_bottom = 50.0
keep_pressed_outside = true
texture_normal = ExtResource("3_cx1s5")

[node name="pixel_size_button" type="TextureButton" parent="."]
offset_left = 67.0
offset_top = 43.0
offset_right = 77.0
offset_bottom = 53.0
keep_pressed_outside = true
texture_normal = ExtResource("4_ncr0o")

[node name="pixel_size_button2" type="TextureButton" parent="."]
offset_left = 67.0
offset_top = 53.0
offset_right = 77.0
offset_bottom = 63.0
keep_pressed_outside = true
texture_normal = ExtResource("4_wi5w6")

[node name="clear_button" type="TextureButton" parent="."]
offset_left = 82.0
offset_top = 52.0
offset_right = 92.0
offset_bottom = 62.0
keep_pressed_outside = true
texture_normal = ExtResource("6_86ko6")

[node name="hub_button" type="TextureButton" parent="."]
offset_left = 67.0
offset_top = 29.0
offset_right = 77.0
offset_bottom = 39.0
keep_pressed_outside = true
texture_normal = ExtResource("8_ufw7c")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 65.0
offset_right = 97.0
offset_bottom = 25.0
texture = ExtResource("7_vdv37")
stretch_mode = 4

[node name="Node" type="Node" parent="."]
script = ExtResource("9_blewi")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="button_up" from="hub_button" to="." method="_on_hub_button_button_up"]
